--- a/src/worlds/Orbits/index.html
+++ b/src/worlds/Orbits/index.html
@@ -40,12 +40,20 @@
         <a-asset-item id="island_3_gltf"      src="assets/models/island_3/scene.gltf" response-type="arraybuffer" crossorigin="anonymous"></a-asset-item>
         <!-- <a-asset-item id="island_leaves_gltf" src="assets/models/island_leaves/scene.gltf" response-type="arraybuffer" crossorigin="anonymous"></a-asset-item> -->
 
+        <a-asset-item id="observatory_gltf"      src="assets/models/spaceship/observatory.gltf" response-type="arraybuffer" crossorigin="anonymous"></a-asset-item>
+        
+        <!-- <a-asset-item id="lobby_gltf"      src="assets/models/spaceship/lobby.obj" response-type="arraybuffer" crossorigin="anonymous"></a-asset-item>
+        <a-asset-item id="lobby_mtl"      src="assets/models/spaceship/lobby.mtl" response-type="arraybuffer" crossorigin="anonymous"></a-asset-item> -->
+        
         <!-- credit: Raystani E. de Oliveira @ https://sketchfab.com/3d-models/stylized-sword-and-shield-lowpoly-e076a1a9fae84c97b8a6cdd5c9162ca2 [editted]-->
         <!-- <a-asset-item id="sword_gltf"    src="assets/models/sword/scene.gltf" response-type="arraybuffer" crossorigin="anonymous"></a-asset-item> -->
 
         <!-- loading navmesh. Following instructiosn from here: https://github.com/n5ro/aframe-extras/tree/master/src/pathfinding -->
-        <a-asset-item id="navmesh_gltf" src="assets/models/navmesh.glb" response-type="arraybuffer" crossorigin="anonymous"></a-asset-item>
+        <!-- <a-asset-item id="navmesh_gltf" src="assets/models/navmesh.glb" response-type="arraybuffer" crossorigin="anonymous"></a-asset-item> -->
+        <a-asset-item id="navmesh_gltf" src="assets/models/nav_meshes/observatoryfloor.gltf" response-type="arraybuffer" crossorigin="anonymous"></a-asset-item>
 
+        <!-- <a-asset-item id="observatory_model" src="\assets\observatory.obj"></a-asset-item>
+        <a-asset-item id="observatory_mat" src="\assets\observatory.mtl"></a-asset-item> -->
         <!-- Circles' built-in assets [REQUIRED] -->
         <circles-assets/>
       </a-assets>
@@ -57,38 +65,38 @@
       <a-entity id="game_manager" lights-interactive></a-entity>
 
       <!-- island 1, with some spawnpoints -->
-      <a-entity circles-checkpoint circles-spawnpoint position="-9.404 0.592 9.588"></a-entity>
+      <!-- <a-entity circles-checkpoint circles-spawnpoint position="-9.404 0.592 9.588"></a-entity>
       <a-entity circles-checkpoint circles-spawnpoint position="-9.751 0.546 7.433"></a-entity>
-      <a-entity circles-checkpoint circles-spawnpoint position="-11.233 0.618 9.290"></a-entity>
+      <a-entity circles-checkpoint circles-spawnpoint position="-11.233 0.618 9.290"></a-entity> -->
 
       <!-- bridge (don't want to spawn people here as they may get dizzy looking down :) -->
-      <a-entity circles-checkpoint position="-12.514 0.050 3.387"></a-entity>
-      <a-entity circles-checkpoint position="-13.701 -0.296 0.336"></a-entity>
+      <!-- <a-entity circles-checkpoint position="-12.514 0.050 3.387"></a-entity>
+      <a-entity circles-checkpoint position="-13.701 -0.296 0.336"></a-entity> -->
 
       <!-- island 2, top -->
-      <a-entity circles-checkpoint position="-16.312 -0.321 -6.120"></a-entity>
+      <!-- <a-entity circles-checkpoint position="-16.312 -0.321 -6.120"></a-entity>
       <a-entity circles-checkpoint position="-12.931 -0.394 -5.361"></a-entity>
-      <a-entity circles-checkpoint position="-14.979 -0.295 -3.137"></a-entity>
+      <a-entity circles-checkpoint position="-14.979 -0.295 -3.137"></a-entity> -->
 
       <!-- island 2, steps -->
-      <a-entity id="door_island_2" circles-checkpoint position="-10.202 -5.867 -2.003"></a-entity>
+      <!-- <a-entity id="door_island_2" circles-checkpoint position="-10.202 -5.867 -2.003"></a-entity>
       <a-entity circles-checkpoint position="-12.111 -2.054 -7.609"></a-entity>
-      <a-entity circles-checkpoint position="-10.319 -3.648 -5.525"></a-entity>
+      <a-entity circles-checkpoint position="-10.319 -3.648 -5.525"></a-entity> -->
 
       <!-- island 3 -->
-      <a-entity id="door_island_3" circles-checkpoint position="5.000 -9.665 2.444"></a-entity>
+      <!-- <a-entity id="door_island_3" circles-checkpoint position="5.000 -9.665 2.444"></a-entity>
       <a-entity circles-checkpoint position="5.413 -9.709 0.099"></a-entity>
-      <a-entity circles-checkpoint position="2.422 -9.769 0.526"></a-entity>
+      <a-entity circles-checkpoint position="2.422 -9.769 0.526"></a-entity> -->
 
       <!-- button that we will use to "teleport" to far off places (i.e., door-to-door in this world) -->
-      <a-entity circles-button="pedastal_color:rgb(74, 87, 95);" circles-sendpoint="target:#door_island_2;" position="6.850 -8.949 2.397" rotation="-89.089 86.144 -53.584" scale="0.8 0.8 0.8"></a-entity>
-      <a-entity circles-button="pedastal_color:rgb(80, 91, 100);" circles-sendpoint="target:#door_island_3" position="-11.503 -5.121 -0.803" rotation="0.057 -30.909 -92.018" scale="0.8 0.8 0.8"></a-entity>
+      <!-- <a-entity circles-button="pedastal_color:rgb(74, 87, 95);" circles-sendpoint="target:#door_island_2;" position="6.850 -8.949 2.397" rotation="-89.089 86.144 -53.584" scale="0.8 0.8 0.8"></a-entity>
+      <a-entity circles-button="pedastal_color:rgb(80, 91, 100);" circles-sendpoint="target:#door_island_3" position="-11.503 -5.121 -0.803" rotation="0.057 -30.909 -92.018" scale="0.8 0.8 0.8"></a-entity> -->
 
       <!-- ambient music/sound -->
-      <a-entity position="0 0 0" circles-sound="type:music; src:#magic_music; autoplay:true; loop:true; volume:0.02;"></a-entity>
+      <!-- <a-entity position="0 0 0" circles-sound="type:music; src:#magic_music; autoplay:true; loop:true; volume:0.02;"></a-entity> -->
 
       <!-- example "artefact" -->
-      <a-entity id="Artefact-Gem"
+      <!-- <a-entity id="Artefact-Gem"
                 position="1.963 -8.241 2.339" rotation="0 0 0" scale="1 1 1"
                 geometry="primitive:octahedron; radius:0.5;"
                 material="color:rgb(255, 100, 20); roughness:0.2; metalness:0.8; sphericalEnvMap:#skyMap;"
@@ -98,8 +106,21 @@
                                   description:[~240-280 chars]  This is the FRONT text that will display when an object is picked up. Adjust scale size and text rotation properties to make more visible.;
                                   title_back:[~20-25 chars] Title Back;
                                   description_back:[~240-280 chars] This is the back/secondary text that will display when you rotate the description bubble.;
-                                  label_text:Gem;"></a-entity>
+                                  label_text:Gem;"></a-entity> -->
 
+    <a-entity id="observatory"
+    position="0 0 0" rotation="0 0 0" scale="1 1 1"
+    gltf-model="#observatory_gltf"
+    circles-sphere-env-map="src:#skyMap"
+    circles-artefact="inspectScale:0.5 0.5 0.5; textRotationY:90.0; textLookAt:false; inspectRotation:0.0 0.0 0; inspectOffsetY:0;
+                      label_offset:0.0 1.0 0.0; label_visible:true; arrow_position:down;
+                      title:[~20-25 chars] Title Front;
+                      description:[~240-280 chars]  This is the FRONT text that will display when an object is picked up. Adjust scale size and text rotation properties to make more visible.;
+                      title_back:[~20-25 chars] Title Back;
+                      description_back:[~240-280 chars] This is the back/secondary text that will display when you rotate the description bubble.;
+                      label_text:Observatory;"></a-entity>
+
+    <!-- <a-entity obj-model="obj: #observatory_model; mtl: #observatory_mat" position = "0 0.2 0"></a-entity> -->
       <!-- <a-entity id="Artefact-Sword"
                 position="-13.171 0.899 9.197" rotation="-18.718 42.756 2.641" scale="1 1 1"
                 gltf-model="#sword_gltf"
@@ -112,22 +133,22 @@
                                   description_back:[~240-280 chars] This is the back/secondary text that will display when you rotate the description bubble.;
                                   label_text:Sword;"></a-entity> -->
 
-      <a-entity id="Portal-Wardrobe"
+      <!-- <a-entity id="Portal-Wardrobe"
                 position="-13.0 1.7 11.4" rotation="0 50 0"
                 circles-portal="img_src:/global/assets/textures/equirectangular/WhiteBlue.jpg; title_text:Wardrobe; link_url:/w/Wardrobe"
-                shadow></a-entity>
+                shadow></a-entity> -->
 
       <!-- leaving this out for now as it doesn't play nice on mobile and VR -->
-      <a-entity id="pdf-test" position="-14.4 2.2 6.4" rotation="0 62 0" scale="2.0 2.0 2.0" circles-pdf-loader="src:/global/assets/pdfs/Scavarelli2020_Article_VirtualRealityAndAugmentedReal.pdf;"></a-entity>
+      <!-- <a-entity id="pdf-test" position="-14.4 2.2 6.4" rotation="0 62 0" scale="2.0 2.0 2.0" circles-pdf-loader="src:/global/assets/pdfs/Scavarelli2020_Article_VirtualRealityAndAugmentedReal.pdf;"></a-entity> -->
 
       <!-- the environment -->
-      <a-entity id="island_1" position="0 0 0" rotation="0 0 0" scale="1 1 1" gltf-model="#island_1_gltf" circles-sphere-env-map="src:#skyMap" shadow="cast:false; receive:true;"></a-entity>
+      <!-- <a-entity id="island_1" position="0 0 0" rotation="0 0 0" scale="1 1 1" gltf-model="#island_1_gltf" circles-sphere-env-map="src:#skyMap" shadow="cast:false; receive:true;"></a-entity>
       <a-entity id="island_2" position="0 0 0" rotation="0 0 0" scale="1 1 1" gltf-model="#island_2_gltf" circles-sphere-env-map="src:#skyMap" shadow="cast:false; receive:true;"></a-entity>
-      <a-entity id="island_2" position="0 0 0" rotation="0 0 0" scale="1 1 1" gltf-model="#island_3_gltf" circles-sphere-env-map="src:#skyMap" shadow="cast:false; receive:true;"></a-entity>
+      <a-entity id="island_2" position="0 0 0" rotation="0 0 0" scale="1 1 1" gltf-model="#island_3_gltf" circles-sphere-env-map="src:#skyMap" shadow="cast:false; receive:true;"></a-entity> -->
       <!-- <a-entity id="island_leaves" position="0 0 0" rotation="0 0 0" scale="1 1 1" gltf-model="#island_leaves_gltf" circles-sphere-env-map="src:#skyMap" shadow="cast:false; receive:true;"></a-entity> -->
 
       <!-- synched lights -->
-      <a-entity id="light_1" position="3.6 -8.1 -1.2"
+      <!-- <a-entity id="light_1" position="3.6 -8.1 -1.2"
               material="color:rgb(101,6,23); opacity:0.8; emissive:rgb(255,4,38); emissiveIntensity:0.0;" geometry="primitive:sphere; radius:0.4;"
               circles-interactive-object="type:highlight; click_sound:#note_c;" animation="property:position; to:3.6 -8.0 -1.2; loop:true; dur:3000; easing:easeInOutQuad; dir:alternate;">
         <a-entity light="type:point; color:rgb(255,4,38); intensity:5.0;"></a-entity>
@@ -146,9 +167,9 @@
                 material="color:rgb(137,85,21); opacity:0.8; emissive:rgb(242,151,39); emissiveIntensity:0.0;" geometry="primitive:sphere; radius:0.5;"
                 circles-interactive-object="type:highlight; click_sound:#note_f;" animation="property:position; to:7.2 -8.3 0.28; loop:true; dur:3500; easing:easeInOutQuad; dir:alternate;">
         <a-entity light="type:point; color:rgb(242,151,39); intensity:5.0;"></a-entity>
-      </a-entity>
+      </a-entity> -->
 
-      <a-entity id="navmesh" gltf-model="#navmesh_gltf" visible='false' nav-mesh></a-entity>
+      <a-entity id="navmesh" gltf-model="#navmesh_gltf" visible='true' nav-mesh></a-entity>
 
       <!-- sky and lights -->
       <a-entity id="sunlight" position="0 20 0" rotation="40 0 0" 
