--- a/src/worlds/Orbits/index.html
+++ b/src/worlds/Orbits/index.html
@@ -8,6 +8,8 @@
     <!-- add your custom scripts here -->
     <!-- <script src="/worlds/hub/scripts/hub.js"></script> -->
     <script src="js/lights-interaction.js"></script>
+
+    <script src="https://unpkg.com/aframe-environment-component@1.3.2/dist/aframe-environment-component.min.js"></script>
   </head>
   <body>
 
@@ -118,14 +120,15 @@
                                   description_back:[~240-280 chars] This is the back/secondary text that will display when you rotate the description bubble.;
                                   label_text:Gem;"></a-entity> -->
 
-    <a-entity id="controlRoom" position="0 0 0" rotation="0 0 0" scale="1 1 1" gltf-model="#controlRoom_gltf" circles-sphere-env-map="src:#skyMap"></a-entity>
-    <a-entity id="departureBay" position="0 0 0" rotation="0 0 0" scale="1 1 1" gltf-model="#departureBay_gltf" circles-sphere-env-map="src:#skyMap"></a-entity>
-    <a-entity id="diningHall" position="0 0 0" rotation="0 0 0" scale="1 1 1" gltf-model="#diningHall_gltf" circles-sphere-env-map="src:#skyMap"></a-entity>
-    <a-entity id="engine" position="0 0 0" rotation="0 0 0" scale="1 1 1" gltf-model="#engine_gltf" circles-sphere-env-map="src:#skyMap"></a-entity>
-    <a-entity id="lobby" position="0 0 0" rotation="0 0 0" scale="1 1 1" gltf-model="#lobby_gltf" circles-sphere-env-map="src:#skyMap"></a-entity>
-    <a-entity id="observatory" position="0 0 0" rotation="0 0 0" scale="1 1 1" gltf-model="#observatory_gltf" circles-sphere-env-map="src:#skyMap"></a-entity>
-    <a-entity id="wingL" position="0 0 0" rotation="0 0 0" scale="1 1 1" gltf-model="#wingL_gltf" circles-sphere-env-map="src:#skyMap"></a-entity>
-    <a-entity id="wingR" position="0 0 0" rotation="0 0 0" scale="1 1 1" gltf-model="#wingR_gltf" circles-sphere-env-map="src:#skyMap"></a-entity>
+    <!-- I removed  circles-sphere-env-map="src:#skyMap" from the models because it made them too bright -->
+    <a-entity id="controlRoom" position="0 0 0" rotation="0 0 0" scale="1 1 1" gltf-model="#controlRoom_gltf"></a-entity>
+    <a-entity id="departureBay" position="0 0 0" rotation="0 0 0" scale="1 1 1" gltf-model="#departureBay_gltf"></a-entity>
+    <a-entity id="diningHall" position="0 0 0" rotation="0 0 0" scale="1 1 1" gltf-model="#diningHall_gltf"></a-entity>
+    <a-entity id="engine" position="0 0 0" rotation="0 0 0" scale="1 1 1" gltf-model="#engine_gltf"></a-entity>
+    <a-entity id="lobby" position="0 0 0" rotation="0 0 0" scale="1 1 1" gltf-model="#lobby_gltf"></a-entity>
+    <a-entity id="observatory" position="0 0 0" rotation="0 0 0" scale="1 1 1" gltf-model="#observatory_gltf"></a-entity>
+    <a-entity id="wingL" position="0 0 0" rotation="0 0 0" scale="1 1 1" gltf-model="#wingL_gltf"></a-entity>
+    <a-entity id="wingR" position="0 0 0" rotation="0 0 0" scale="1 1 1" gltf-model="#wingR_gltf"></a-entity>
 
     <!-- <a-entity obj-model="obj: #observatory_model; mtl: #observatory_mat" position = "0 0.2 0"></a-entity> -->
       <!-- <a-entity id="Artefact-Sword"
@@ -183,11 +186,13 @@
                 light="type:directional; intensity:4; color:#d5e4f5; castShadow:false;"></a-entity>
       <a-entity light="type:hemisphere; color:#FFFFFF; groundColor:#BCE2F4; intensity:3.0"></a-entity>
 
-      <a-entity id='skyBox'
+      <!-- <a-entity id='skyBox'
                 rotation='0 200 0'
                 geometry='primitive:sphere; radius:50; segments-height:24; segments-width:24;'
                 material='shader:flat; src:#skyMap; side:back;'>
-      </a-entity>
+      </a-entity> -->
+
+      <a-entity environment="preset:starry;"></a-entity>
     </a-scene>
 
     <!-- Circles' end scripts [REQUIRED] -->
