--- a/src/worlds/Orbits/index.html
+++ b/src/worlds/Orbits/index.html
@@ -9,7 +9,7 @@
     <!-- <script src="/worlds/hub/scripts/hub.js"></script> -->
     <script src="js/lights-interaction.js"></script>
     <script src="js/open-doors.js"></script>
-
+    <script src="js/audio-manager.js"></script>
     <script src="https://unpkg.com/aframe-environment-component@1.3.2/dist/aframe-environment-component.min.js"></script>
   </head>
   <body>
@@ -293,6 +293,10 @@
       </a-entity> -->
 
       <a-entity environment="preset:starry;"></a-entity>
+
+       <!-- Audio Manager -->
+       <audio id="myAudio" src="public\assets\background_audio.mp3"></audio>
+
     </a-scene>
 
     <!-- Circles' end scripts [REQUIRED] -->
