--- a/src/worlds/Orbits/index.html
+++ b/src/worlds/Orbits/index.html
@@ -205,7 +205,7 @@
 
     <!-- Interior objects -->
     <!-- Description credit: https://www.bankofcanada.ca/banknotes/bank-note-series/frontiers/5-polymer-note/ -->
-    <a-entity geometry="primitive: box; width:1.25;height:0.5;depth:0.01;" material="src: #fiveDollar_jpg" id="fiveDollar" position="0 1.7 -10" rotation="90 0 0"
+    <a-entity geometry="primitive: box; width:1.25;height:0.5;depth:0.01;" material="src: #fiveDollar_jpg" id="fiveDollar" position="0 1.7 -10" rotation="288 0 0"
               circles-sphere-env-map="src:#skyMap"
               circles-artefact="inspectScale:1 1 1; textRotationY:90.0; inspectRotation:0.0 0.0 0;
               label_offset:0.0 0.3 0.0; arrow_position:down; descriptionLookAt:true;
@@ -232,8 +232,8 @@
     <a-entity id="imaxCamera" position="4.8 5.3 -12.1" rotation="15 -20 0" scale="1 1 1" gltf-model="#imaxCamera_gltf"
               circles-sphere-env-map="src:#skyMap"
               circles-artefact="inspectScale:1 1 1; textRotationY:0.0; inspectRotation:15 -20 0;
-              label_offset:0.0 -0.7 0.0; arrow_position:up; descriptionLookAt:true;
-              description_offset: 0.0 -0.7 0.0;
+              label_offset:0.0 -0.7 0.0; label_arrow_position:up; descriptionLookAt:true;
+              description_offset: 0.0 -0.7 0.0; desc_arrow_position: up;
               title:Camera;
               description:This is an Imax camera;
               title_back:Imax Camera;
@@ -243,7 +243,8 @@
     <a-entity id="satellite" position="-3 5 -10.4" rotation="110 50 0" scale="1 1 1" gltf-model="#satellite_gltf"
               circles-sphere-env-map="src:#skyMap"
               circles-artefact="inspectScale:0.7 0.7 0.7; textRotationY:0.0; inspectRotation:110 50 0;
-              label_offset:0.0 -1.0 0.0; arrow_position:up; descriptionLookAt:true;
+              label_offset:0.0 -1.0 0.0; label_arrow_position:up; descriptionLookAt:true;
+              description_offset: 0.0 -1.0 0.0; desc_arrow_position: up;
               title:Satellite;
               description:This is a satellite;
               title_back:Satellite;
