added labels to objects

--- a/src/worlds/Orbits/index.html
+++ b/src/worlds/Orbits/index.html
@@ -210,9 +210,9 @@
               circles-artefact="inspectScale:1 1 1; textRotationY:90.0; inspectRotation:0.0 0.0 0;
               label_offset:0.0 0.3 0.0; arrow_position:down; descriptionLookAt:true;
               title:Canadian $5 Bill;
-              description:On the Canadian $5 bill there is the Canadarm and an astronaut, who represents all Canadians who have contributed to the space program and the research conducted on board the International Space Station;
+              description:The Canadian $5 bill features the Canadarm and an astronaut, who represents all Canadians who have contributed to the space program and the research conducted on the International Space Station.;
               title_back:Canadian $5 Bill;
-              description_back:On the Canadian $5 bill there is the Canadarm and an astronaut, who represents all Canadians who have contributed to the space program and the research conducted on board the International Space Station;
+              description_back:The Canadian $5 bill features the Canadarm and an astronaut, who represents all Canadians who have contributed to the space program and the research conducted on the International Space Station.;
               label_text:$5;">
     </a-entity>
 
@@ -221,9 +221,9 @@
               circles-artefact="inspectScale:1 1 1; textRotationY:0.0; inspectRotation:0.0 180.0 0;
               label_offset:0.0 1.0 0.0; arrow_position:down; descriptionLookAt:true;
               title:Helmet;
-              description:You will need to wear a helmet and space suit on your space walk;
+              description:The Canadarm supported astronauts during space walks. Spacewalks can last up to 5-7 hours!;
               title_back:Helmet;
-              description_back:You will need to wear a helmet and space suit on your space walk;
+              description_back:The Canadarm supported astronauts during space walks. Spacewalks can last up to 5-7 hours!;
               label_text:Helmet;">
     </a-entity>
 
@@ -235,9 +235,9 @@
               label_offset:0.0 -0.7 0.0; label_arrow_position:up; descriptionLookAt:true;
               description_offset: 0.0 -0.7 0.0; desc_arrow_position: up;
               title:Camera;
-              description:This is an Imax camera;
+              description:There are 2 IMAX cameras on the Canadarm that film and document the experience of astronauts in space.;
               title_back:Imax Camera;
-              description_back:This is an Imax camera;
+              description_back:There are 2 IMAX cameras on the Canadarm that film and document the experience of astronauts in space.;
               label_text:Imax Camera;">
     </a-entity>
     <a-entity id="satellite" position="-3 5 -10.4" rotation="110 50 0" scale="1 1 1" gltf-model="#satellite_gltf"
@@ -246,9 +246,9 @@
               label_offset:0.0 -1.0 0.0; label_arrow_position:up; descriptionLookAt:true;
               description_offset: 0.0 -1.0 0.0; desc_arrow_position: up;
               title:Satellite;
-              description:This is a satellite;
+              description:The Canadarm was used to send satellites into orbit.;
               title_back:Satellite;
-              description_back:This is a satellite;
+              description_back:The Canadarm was used to send satellites into orbit.;
               label_text:Satellite;">
     </a-entity>
     <a-entity id="toolbox" position="1 0.3 -11.6" rotation="0 180 0" scale="1 1 1" gltf-model="#toolbox_gltf"
@@ -256,15 +256,22 @@
               circles-artefact="inspectScale:1 1 1; textRotationY:0.0; inspectRotation:0.0 180.0 0;
               label_offset:0.0 1.0 0.0; arrow_position:down; descriptionLookAt:true;
               title:Toolbox;
-              description:This is a toolbox;
+              description:The Canadarm helped perform repairs on satellites and the International Space Station. A notable use was repairing the Hubble Space Telescope.;
               title_back:Toolbox;
-              description_back:This is a toolbox;
+              description_back:The Canadarm helped perform repairs on satellites and the International Space Station. A notable use was repairing the Hubble Space Telescope.;
               label_text:Toolbox;">
     </a-entity>
-    
 
     <!-- James Webb telescope -->
-    <a-entity id="jamesWebb" position="30 0 -47" rotation="0 -70 0" scale="1 1 1" gltf-model="#jamesWebb_gltf"></a-entity>
+    <a-entity id="jamesWebb" position="30 0 -47" rotation="0 -70 0" scale="1 1 1" gltf-model="#jamesWebb_gltf"
+              circles-sphere-env-map="src:#skyMap"
+              circles-artefact="inspectScale:1 1 1; textRotationY:0.0; inspectRotation:0.0 180.0 0;
+              label_offset:0.0 1.0 0.0; arrow_position:down; descriptionLookAt:true;
+              title:James Webb Space Telescope;
+              description:The James Webb telescope is currently the most powerful space telescope. It is a collaboration between NASA, the European Space Agency, and the Canadian Space Agency.;
+              title_back:James Webb Space Telescope;
+              description_back:The James Webb telescope is currently the most powerful space telescope. It is a collaboration between NASA, the European Space Agency, and the Canadian Space Agency.;
+              label_text:James Webb Telescope;"></a-entity>
 
       <!-- <a-entity id="Artefact-Sword"
                 position="-13.171 0.899 9.197" rotation="-18.718 42.756 2.641" scale="1 1 1"
